objects/Borrego_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Awarded_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>checkoff if this is the competitor that was awarded the project</inlineHelpText>
        <label>Awarded Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012340000007kiE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Opportunities</relationshipLabel>
        <relationshipName>Borrego_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EPC_Price__c</fullName>
        <label>Competitor EPC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>include any other enticements that may have helped win the deal</inlineHelpText>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Borrego Competitors</relationshipLabel>
        <relationshipName>Borrego_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPA_Price__c</fullName>
        <label>Competitor PPA Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Borrego Competitors</label>
    <nameField>
        <displayFormat>COMP-{0}</displayFormat>
        <label>Competitor Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrego Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>